<resources>
    <string name="app_name">Court Counter</string>
    <string name="action_settings">settings</string>
    <string name="Team_A">Team A</string>
    <string name="Team_B">Team B</string>
    <string name="three_points">3 Points</string>
    <string name="two_points">2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="score">0</string>
    <string name="reset">Reset</string>

</resources>
